<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="319dp"
        android:layout_height="58dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/labelNameSignup"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:text="@string/txtLabelName"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/inputNameSignup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="329dp"
        android:layout_height="53dp"
        android:layout_marginBottom="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/labelAgeSignup"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="@string/txtLabelAge"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/inputAgeSignup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/labelCrearCuenta"
        android:layout_width="125dp"
        android:layout_height="36dp"
        android:layout_marginTop="56dp"
        android:text="@string/textBtnSignup"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="328dp"
        android:layout_height="49dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/labelPasswordSignup"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/textLabelPassword"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/inputPasswordSignup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:drawableEnd="@drawable/ic_eye_closed"
            android:paddingEnd="12dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="326dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/labelEmailSignup"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:text="@string/textLabelEmail"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/inputEmailSignup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/textBtnSignup"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCrearCuenta"
        app:layout_constraintVertical_bias="0.451"
        app:srcCompat="@drawable/registro" />

</androidx.constraintlayout.widget.ConstraintLayout>